# brand_scanner

./: .gitignore  README.md  pyproject.toml  requirements.txt
brand_scanner/: main.py  website_downloader.py
brand_scanner/data/gmmb_com/: capabilities.md  climate.md
data/: gmmb_com.md
data/gmmb_com/: accessibility-policy.md  blog.md  capabilities.md  climate.md  get-in-touch.md  governmentservices.md  join-our-team.md  mbe-teaming.md  our-work.md  privacy-policy.md  who-we-are.md
data/gmmb_com/author/: blloyd.md
data/gmmb_com/blog/: ?news-category=climate-newsletter.md  ?news-category=gmmb-news.md  ?news-category=issue-insights.md  ?pagenum=.md  ?pagenum=10.md  ?pagenum=11.md  ?pagenum=12.md  ?pagenum=13.md  ?pagenum=14.md  ?pagenum=15.md  ?pagenum=16.md  ?pagenum=17.md  ?pagenum=18.md  ?pagenum=19.md  ?pagenum=2.md  ?pagenum=20.md  ?pagenum=21.md  ?pagenum=22.md  ?pagenum=23.md  ?pagenum=24.md  ?pagenum=25.md  ?pagenum=26.md  ?pagenum=3.md  ?pagenum=30.md  ?pagenum=4.md  ?pagenum=5.md  ?pagenum=9.md
data/gmmb_com/case/: aarp-stop-rx-greed.md  advancing-lifesaving-alcohol-detection-technology.md  advertising-fca.md  advocacy.md  alliance-for-bangladesh.md  american-beverage-association.md  awakening-a-brand-behind-the-music.md  branding-and-positioning.md  building-bridges-air.md  encouraging-vehicle-safety-recall-repairs.md  engaging-americans-in-service-through-americorps.md  focus-on.md  gates-values-commission.md  gridworks-needs-title.md  (+22 more)
gmmb_scrapper/: scrapy.cfg
gmmb_scrapper/gmmb_scrapper/: items.py  middlewares.py  pipelines.py  settings.py
(+451 files in other folders)
