[tool.poetry]
name = "brand-scanner"
version = "0.1.0"
description = ""
authors = ["blakedaniel <blake.vanfleteren@gmail.com>"]
readme = "README.md"
packages = [{include = "brand_scanner"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.26.0"
openai = "^0.27.9"
llama-index = "^0.8.9"
nltk = "^3.8.1"
scrapy = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
